--- a/style.css
+++ b/style.css
@@ -4,25 +4,34 @@
     box-sizing:border-box;
 }
 
-.navContainer{
+.navLinksContainerColumn{
     display:flex;
     align-content:center;
     justify-content:space-evenly;
     flex-wrap:wrap;
     flex-direction:row;
     background:grey;
-    height:8rem;
+    height:7.5rem;
     text-decoration:none;
-    
-}
+    padding-right:2rem;
+    padding-left:1rem;
+    }
+
 a{
     
     text-decoration:none;
     color:black;
     background:white;
-    padding:1rem;
+    padding:10px;
+    margin:10px;
     border-style:solid;
     border-width:2px;
     border-color:black;
+}
+
+.navLinksContainerColumn>:nth-child(2){
+    flex-grow:1;
+    background:none;
+    border-style:none;
 }
 
