--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,15 @@
     padding:0;
     box-sizing:border-box;
 }
+body{ min-height: 100vh; margin:0; }
+
+header{
+     min-height:50px;
+    }
+footer{
+     min-height:50px;
+    }
+
 /*general style normalization end*/
 
 
@@ -94,6 +103,11 @@ footer{
     background:rgb(201, 201, 201);
     flex-direction:row;
     justify-content:space-between;
+    align-items:center;
+    align-self:flex-end;
+    margin-top:100%;
+    
+
 }
 
 
@@ -106,6 +120,7 @@ footer{
 div>a{
     background:rgb(201, 201, 201);
     border-style:none;
+    
 }
 .cohortName{
     margin-right:2%;
@@ -119,3 +134,151 @@ div>a{
 /* ## footer styling end   ## */
 /* ##                      ## */
 
+
+/* ##                              ## */
+/* ## search options styling start ## */
+/* ##                              ## */
+.formFilterContent{
+    padding:2rem;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-evenly;
+    margin-left:5rem;
+    
+}
+
+.formFilter{
+    display:flex;
+    align-items:center;
+
+}
+.searchBox{
+    margin-bottom:2rem;
+    width:35rem;
+}
+
+.formSpacer{
+    width:25rem;
+    background:none;
+    border-style:none;
+}
+
+label{
+    margin:2rem;
+}
+/* ##                             ## */
+/* ## search options styling end  ## */
+/* ##                             ## */
+
+.card{
+    display:flex;
+    width:15rem;
+    border-style:solid;
+    border-color:black;
+    border-width:1px;
+    margin-left:10%;
+    align-items:center;
+    
+    
+}
+.card>img{
+    position:relative;
+    width:14rem;
+    margin:5px;
+    margin-top:1rem;
+    box-shadow:-2px -2px 4px;
+}
+
+.cardPrize{
+    display:flex;    
+    flex-direction:row;
+    margin-top:4rem;
+    width:15rem;
+    justify-content:space-around;
+    align-items:center;
+    margin-right:1rem;
+    margin-left:1rem;
+    margin-bottom:1rem;
+    
+
+}
+
+
+.addToCart{
+    font-size:15px;
+    padding:5px;
+    box-shadow:-2px -1px 1px;
+    
+}
+
+.cardsRow{
+    display:flex;
+}
+
+
+/* ##                             ## */
+/* ## contact form start          ## */
+/* ##                             ## */
+
+.contactForm{
+    margin-top:5rem;
+    display:flex;
+    flex-direction:column;
+    
+}
+.contactForm>input{
+    width:200%;
+    margin-top:-4rem;
+}
+
+.sectionContactForm{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    width:15rem;
+    margin-left:40%;
+}
+.messageBox{
+  height:10rem;
+  margin-bottom:5rem;
+}
+
+.formSubmit{
+    display:flex;   
+    justify-content:center;
+    border-style:outset;
+    border-color:black;
+    height:50px;
+    width:50px;
+    
+    
+}
+
+/* ##                             ## */
+/* ## contact form end            ## */
+/* ##                             ## */
+
+
+/* ##                             ## */
+/* ## stat table start            ## */
+/* ##                             ## */
+main{
+    display:flex;
+    justify-content:center;
+}
+.statTable{
+    display:flex;
+    
+    margin:1rem;
+    padding: 2rem;
+    border:solid 1px;
+    width:80%;
+
+    
+
+}
+
+
+/* ##                             ## */
+/* ## stat table end              ## */
+/* ##                             ## */
