--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,18 @@
     padding:0;
     box-sizing:border-box;
 }
-body{ min-height: 100vh; margin:0; }
+body{
+    min-height:auto;
+    margin:0;
+}
+
+main{
+    box-sizing: border-box;
+    min-height: 50rem;
+    display: flex;
+    flex-direction: column;
+}
+
 
 header{
      min-height:50px;
@@ -105,7 +116,7 @@ footer{
     justify-content:space-between;
     align-items:center;
     align-self:flex-end;
-    margin-top:100%;
+    
     
 
 }
@@ -184,7 +195,8 @@ label{
 }
 .card>img{
     position:relative;
-    width:14rem;
+    width:85%;
+    height:85%;
     margin:5px;
     margin-top:1rem;
     box-shadow:-2px -2px 4px;
@@ -207,8 +219,10 @@ label{
 
 .addToCart{
     font-size:15px;
-    padding:5px;
+    padding:1%;
+    width:80px;
     box-shadow:-2px -1px 1px;
+    margin-bottom:10%;
     
 }
 
