dynamic details on index

--- a/styles/style.css
+++ b/styles/style.css
@@ -404,14 +404,9 @@ footer{
 
 .detailContainer{
     display:flex;
-    flex-direction:row;
-
+    flex-direction:column;
     justify-content:center;
     align-content:center;
-    
-    
-    
-
 }
 
 .detailRow{
